[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/enemies/enemy_3/fly_3.png" type="Texture" id=1]
[ext_resource path="res://assets/enemies/enemy_3/fly_5.png" type="Texture" id=2]
[ext_resource path="res://assets/enemies/enemy_3/fly_1.png" type="Texture" id=3]
[ext_resource path="res://assets/enemies/enemy_3/fly_4.png" type="Texture" id=4]
[ext_resource path="res://assets/enemies/enemy_3/fly_0.png" type="Texture" id=5]
[ext_resource path="res://assets/enemies/enemy_3/fly_2.png" type="Texture" id=6]
[ext_resource path="res://assets/environment/shadow.png" type="Texture" id=7]
[ext_resource path="res://scenes/enemy/HitBox.gd" type="Script" id=8]
[ext_resource path="res://scenes/enemy/Enemy.gd" type="Script" id=9]
[ext_resource path="res://assets/enemies/death_1.png" type="Texture" id=10]
[ext_resource path="res://assets/enemies/death_0.png" type="Texture" id=11]
[ext_resource path="res://assets/enemies/death_2.png" type="Texture" id=12]
[ext_resource path="res://scenes/world/HealthBar.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/weapons/hit.wav" type="AudioStream" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 10 ), ExtResource( 12 ) ],
"loop": false,
"name": "death",
"speed": 10.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 2.0
height = 4.0

[sub_resource type="CapsuleShape2D" id=3]
height = 6.0

[node name="Enemy_3" type="KinematicBody2D" groups=["enemy"]]
script = ExtResource( 9 )
speed = 130
hitpoints = 45

[node name="Shadow" type="Sprite" parent="."]
self_modulate = Color( 0, 0, 0, 0.54902 )
position = Vector2( 0, 26 )
scale = Vector2( 0.210938, 0.123047 )
z_index = -1
texture = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -25 )
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 10 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="HitBox" type="Area2D" parent="."]
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0, -1 )
shape = SubResource( 3 )

[node name="HealthBar" parent="." instance=ExtResource( 13 )]
margin_left = -21.0
margin_top = -34.0
margin_right = 21.0
margin_bottom = -32.0

[node name="AttackCooldown" type="Timer" parent="."]

[node name="hit_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="HitBox" to="HitBox" method="_on_HitBox_body_entered"]
[connection signal="timeout" from="AttackCooldown" to="HitBox" method="_on_AttackCooldown_timeout"]
